# geotrimesh

./: .gitignore  MANIFEST  NOTICE.txt  README.md  demo.py  generate_sample.py  generate_sample_preparedata.sh  generate_sample_srtm1.py  generate_tocomee.py  log.txt  pottenstein.x3d  pyproject.toml  recompute_face_normals.mlx  setup.py  sync_to_vserver.sh  todo.txt
demodata/: 2507_clip.tif  bbox.gpkg  bmng_200407_21600x21600_c1_clip.tif  bmng_2004_clip_pottenstein_25832.tif  data.gltf  dtm_26830_12470_clip.tif  dtm_26830_12470_clip_lowres.tif  dtm_26830_12470_clip_lq.tif  gtopo30_1996_clip_pottenstein.tif  gtopo30_1996_clip_pottenstein_25832.tif  gtopo30_1996_clip_pottenstein_25832.tif.aux.xml  osm201704_bound_adm8_pottenstein.dbf  osm_2017_pottenstein.shp  osm_2017_pottenstein.shx  osm_2017_pottenstein_25832.shp  osm_2017_pottenstein_25832.shx  osm_2017_pottenstein_simple.dbf  osm_2017_pottenstein_simple.shp  osm_2017_pottenstein_simple.shx  osm_2017_pottenstein_simple_25832.dbf  osm_2017_pottenstein_simple_25832.gpkg  osm_2017_pottenstein_simple_25832.shp  osm_2017_pottenstein_simple_25832.shx  osm_2017_pottenstein_simple_25832_single.dbf  osm_2017_pottenstein_simple_25832_single.shp  osm_2017_pottenstein_simple_25832_single.shx  osm_2017_pottenstein_simple_25832_single_exclave.dbf  osm_2017_pottenstein_simple_25832_single_exclave.shp  osm_2017_pottenstein_simple_25832_single_exclave.shx  srtm3_2000_clip_pottenstein.tif  srtm3_2000_clip_pottenstein.xml  srtm3_2000_clip_pottenstein_25832.tif  srtm3_n049_e011_3arc_v2_clip.tif.aux.xml  zurich_lod2_clip.glb
(+48 files in other folders)
